fixed issue on pannenkoek.html missing a / at the closing title

--- a/recipes/pannenkoek.html
+++ b/recipes/pannenkoek.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pannenkoek<title>
+    <title>Pannenkoek</title>
 </head>
+
 <body>
     <h1>Pannenkoek</h1>
-    <h2>Hallo Pik</h2>
-    
+
     <img src="./images/pannenkoek.jpg"><img>
 
     <a href="../index.html">Home</a>
