Tested what I've learned about HTML & CSS

--- a/index.html
+++ b/index.html
@@ -3,15 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin First Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <section>
+        <div class="container">
+            <div class="left-center">
+                <div class="left-above">
+                    <img class="photo-edit" src="images/Juultje.png" alt="Beschrijving van de foto">
+                </div>
+                <div class="left-under">
+                    <img src="images/Vegetarian.png" alt="Beschrijving van de foto">
+                </div>
+            </div>
 
-    <ul>
-       <li><a href="recipes/lasagna.html">Lasagna</a></li> 
-       <li><a href="recipes/pizza.html">Pizza</a></li>
-       <li><a href="recipes/pannenkoek.html">Pannenkoek</a></li>
-    </ul>
-    
+            <div class="center">
+                <div class="content">
+                    <div class="content-title"><h1>Toms' favorite Recipes</h1></div>
+                    <p>On this website, I keep all the recipes I love. It's a personal collection built from memorable eating experiences, experiments in the kitchen, 
+                        and moments when a dish truly hit the spot. Whenever I'm unsure about what to cook, I come here for inspiration. <br><br>
+                        All of the meals you'll find here are vegetarian. I made the switch a few years ago after watching footage of the animal industry — 
+                        it opened my eyes and made me truly reflect on what I was eating. Since then, I've chosen to avoid meat, 
+                        not only out of compassion for animals but also because of the environmental impact of meat production. 
+                        Cooking and eating this way feels more in line with my values, and it turns out, it can be incredibly delicious too. <br><br>
+                        
+                        I hope this collection inspires you as much as it inspires me.
+                    </p>
+                </div>
+                <div class="recipes-list">
+                    <ul>
+                        <button><li><a href=""></a>Pasta gerechten</li></button>
+                        <button><li><a href=""></a>Rijst gerechten</li></button>
+                        <button><li><a href=""></a>Ovenschotels</li></button>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="right-center">
+                <div class="right-above">
+                    <img class="photo-edit" src="images/Myself.png" alt="Beschrijving van de foto">
+                </div>
+                <div class="right-under">
+                    <p class="quote">"It becomes hard to eat meat when you realize you can choose life instead of death."</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
