Added href to the receipt pages

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 </div>
                 <div class="recipes-list">
                     <ul>
-                        <button><li><a href=""></a>Pasta gerechten</li></button>
-                        <button><li><a href=""></a>Rijst gerechten</li></button>
-                        <button><li><a href=""></a>Ovenschotels</li></button>
+                        <li><a href="pasta-receipts/index.html" class="button">PASTA RECEIPTS</a></li>
+                        <li><a href="rice-receipts/index.html" class="button">RICE RECEIPTS</a></li>
+                        <li><a href="oven-receipts/index.html" class="button">OVEN RECEIPTS</a></li>
                     </ul>
                 </div>
             </div>
