made a description for all the rice meals

--- a/rice-receipts/index.html
+++ b/rice-receipts/index.html
@@ -9,13 +9,16 @@
 <body>
     <section>
         <div class="pageTitle">
-            <h1> Toms' Pasta's </h1>
+            <h1> Toms' Rice Recipes </h1>
         </div>
         <div class="allReceipts">
             <div id="creamyPasta">
                 <div id="creamyIntro">
-                    <h2> Creamy Pasta </h2>
-                    <p>Een klassieke Italiaanse pasta met tomatensaus en vegetarisch gehakt.</p>
+                    <h2> Vegetarian Rice Butter "Chicken" </h2>
+                    <p>A comforting, rich, and mildly spiced dish inspired by the classic Indian butter chicken—made vegetarian. 
+                    This version swaps chicken for paneer, tofu, or plant-based chicken, simmered in a luscious tomato-butter-cream sauce, 
+                    served over fragrant basmati rice. Perfect for a satisfying dinner.
+                    </p>
                 </div>
                 <hr>
                 <div>
@@ -24,12 +27,17 @@
                 <hr>
                 <div>
                     <ul>
-                        <li>Kaas</li>
-                        <li>Kaas</li>
-                        <li>Kaas</li>
-                        <li>Kaas</li>
-                        <li>Kaas</li>
-                        <li>Kaas</li>
+                        <li>200g basmati rice</li>
+                        <li>250g paneer, tofu, or plant-based chicken chunks</li>
+                        <li>2 tbsp butter (or vegan butter)</li>
+                        <li>1 onion, finely chopped</li>
+                        <li>1 tbsp ginger-garlic paste</li>
+                        <li>2 tsp garam masala</li>
+                        <li>1 tsp ground cumin</li>
+                        <li>1 tsp ground coriander</li>
+                        <li>½ tsp turmeric</li>
+                        <li>1 tsp chili powder (adjust to taste)</li>
+                        <li></li>
                     </ul>
                 </div>
                 <hr>
@@ -50,8 +58,9 @@
 
             <div id="pestoPasta">
                 <div id="pestoIntro">
-                    <h2>Pesto Pasta</h2>
-                    <p> Dit is de eerste aanwijzing</p>
+                    <h2>Vegetarian Chili con Carne (Chili sin Carne)</h2>
+                    <p>This meatless chili is rich, smoky, and satisfying — loaded with beans, vegetables, and warm spices. 
+                    It's a one-pot meal that's easy to make and perfect served with rice, nachos, or crusty bread.</p>
                 </div>
                 <hr>
                 <div>
@@ -85,8 +94,9 @@
             </div>
             <div id="tomatoPasta">
                 <div id="tomatoIntro">
-                    <h2>Tomato Pasta</h2>
-                    <p> Dit is de eerste aanwijzing</p>
+                    <h2>Mushroom Risotto</h2>
+                    <p>A creamy, savory risotto made with sautéed mushrooms, white wine, and Parmesan cheese. It's a cozy, 
+                    satisfying dish perfect for a dinner party or a comforting night in.</p>
                 </div>
                 <hr>
                 <div>
