changed the pageTitle h1

--- a/pasta-receipts/index.html
+++ b/pasta-receipts/index.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <div class="pageTitle">
-            <h1> Toms' Pasta's </h1>
+            <h1> Toms' favorite pasta receipts </h1>
         </div>
         <div class="allReceipts">
             <div id="creamyPasta">
@@ -21,7 +21,7 @@
                 </div>
                 <hr>
                 <div>
-                    <h4>Ingredients (2 persons) </h4>
+                    <h4>Ingredients </h4>
                 </div>
                 <hr>
                 <div class="ingredientsList">
